@@ -21,4 +21,7 @@ eval "use Pod::Coverage $min_pc";
 plan skip_all => "Pod::Coverage $min_pc required for testing POD coverage"
     if $@;
 
-all_pod_coverage_ok();
+pod_coverage_ok('Test::BrewBuild');
+pod_coverage_ok('Test::BrewBuild::Plugin');
+
+done_testing();
